EntitySorter refactoring:
1. Created via a factory explicitly. I would rather we have all services as singletons in CoreModule
2. No more lazy reindex. Just do it explicitly
3. EntityResolver should not hold EntitySorter (circlula relationship). Let the DataNode own it instead